feat: exposed the npmepm command
- created bin/npmepm.js to expose the npmepm CLI utility
- exposed the npmepm command in package.json
- wired up tests
- created lib
- moved dockerps.js to lib
- split some functionality of dockerps.js out into bin/npmepm.js and
  lib/commands.js

--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "npm Enterprise Post Mortem",
   "main": "index.js",
+  "bin": {
+    "npmepm": "bin/npmepm.js"
+  },
   "scripts": {
-    "dockerps": "node src/dockerps.js"
+    "start": "node bin/npmepm.js",
+    "test": "tap test/*.js"
   },
   "author": "Joel Edwards <joel@npmjs.com>",
   "license": "ISC",
