--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "chalk": "^2.3.0",
+    "cli-truncate": "^1.1.0",
     "durations": "^3.0.0",
+    "gunzip-maybe": "^1.4.1",
     "js-yaml": "^3.10.0",
     "oboe": "^2.1.4",
     "ramda": "^0.25.0",
     "shelljs": "^0.7.8",
     "table": "^4.0.2",
     "tap": "^10.7.2",
+    "tar": "^4.0.2",
+    "tar-stream": "^1.5.5",
     "yargs": "^10.0.3"
   }
 }
