--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@npmcorp/npmepm",
-  "version": "1.1.0",
+  "name": "npmepm",
+  "version": "1.1.1",
   "description": "npm Enterprise Post Mortem",
   "main": "index.js",
   "bin": {
