--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "epm": "bin/npmepm.js"
   },
   "scripts": {
+    "lint": "standard",
+    "lint:fix": "standard --fix",
     "start": "node bin/npmepm.js",
+    "pretest": "npm run lint",
     "test": "tap --cov test/*.test.js"
   },
   "author": "Joel Edwards <joeledwards@gmail.com>",
@@ -17,7 +20,6 @@
     "@buzuli/color": "^1.2.0",
     "bluebird": "^3.5.1",
     "byline": "^5.0.0",
-    "chalk": "^2.3.0",
     "cli-truncate": "^1.1.0",
     "durations": "^3.4.1",
     "gunzip-maybe": "^1.4.1",
@@ -25,11 +27,14 @@
     "oboe": "^2.1.4",
     "ramda": "^0.25.0",
     "shelljs": "^0.7.8",
-    "stream-buffers": "^3.0.1",
     "table": "^4.0.2",
-    "tap": "^10.7.3",
     "tar-stream": "^1.5.5",
-    "walk": "^2.3.9",
+    "walk": "^2.3.9"
+  },
+  "devDependencies": {
+    "standard": "^11.0.1",
+    "stream-buffers": "^3.0.1",
+    "tap": "^10.7.3",
     "yargs": "^10.1.2"
   }
 }
