--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@buzuli/color": "^1.2.0",
+    "@buzuli/json": "^1.1.3",
     "bluebird": "^3.5.1",
     "byline": "^5.0.0",
     "cli-truncate": "^1.1.0",
@@ -27,13 +28,13 @@
     "oboe": "^2.1.4",
     "ramda": "^0.25.0",
     "shelljs": "^0.7.8",
+    "stream-buffers": "^3.0.1",
     "table": "^4.0.2",
     "tar-stream": "^1.5.5",
     "walk": "^2.3.9"
   },
   "devDependencies": {
     "standard": "^11.0.1",
-    "stream-buffers": "^3.0.1",
     "tap": "^10.7.3",
     "yargs": "^10.1.2"
   }
