--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "durations": "^3.4.1",
     "gunzip-maybe": "^1.4.1",
     "js-yaml": "^3.10.0",
+    "moment": "^2.22.0",
     "oboe": "^2.1.4",
     "ramda": "^0.25.0",
     "semver": "^5.5.0",
