--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@buzuli/color": "^1.2.0",
     "@buzuli/json": "^1.1.3",
+    "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "byline": "^5.0.0",
     "cli-truncate": "^1.1.0",
